<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter+</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_home_timeline">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_compose">Compose</string>
    <string name="title_activity_compose_page">ComposePageActivity</string>
    <string name="user_name_placeholder">Maroon 5</string>
    <string name="user_id_placeholder">\@maroon5</string>
    <string name="caption_placeholder">Freedom is being able to live your dream the way tou want to live it #MYFREEDOM</string>
    <string name="relative_timestamp_placeholder">6 days</string>
    <string name="count_placeholder">9999</string>
    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="compose_tweet_hint">What\'s new?</string>
    <string name="compose_submit_btn_wording">Post</string>
    <string name="compose_remaining_word_count">140</string>
    <string name="title_activity_detail_view">Replies</string>
    <string name="retweet_wording">retweet</string>
    <string name="favorite_wording">favorite</string>
    <string name="date_time_placeholder">2015/01/01</string>
    <string name="title_activity_full_screen_image_view">FullScreenImageViewActivity</string>
    <string name="following_wording">following</string>
    <string name="follower_wording">follower</string>
    <string name="title_activity_profile_view">Profile</string>
    <string name="long_textview_placeholder">aaaaaaaaaaaaaaa</string>
    <string name="short_textview_placeholder">aaaaaa</string>
</resources>