<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.SimpleTwitterClient.Activities.DetailViewActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="@dimen/profile_img_size"
            android:layout_height="@dimen/profile_img_size"
            android:background="@color/twitter_middle_gray"
            android:id="@+id/posterProfilePhotoIv"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_placeholder"
            android:id="@+id/postUserNameTv"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/posterProfilePhotoIv"
            android:layout_toEndOf="@+id/posterProfilePhotoIv"
            android:layout_marginLeft="@dimen/common_small_margin"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/twitter_black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id_placeholder"
            android:id="@+id/posterUserIdTv"
            android:layout_below="@+id/postUserNameTv"
            android:layout_alignLeft="@+id/postUserNameTv"
            android:layout_alignStart="@+id/postUserNameTv"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_placeholder"
            android:textSize="@dimen/large_text_size"
            android:id="@+id/posterTweetContentTv"
            android:layout_below="@+id/posterProfilePhotoIv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/common_margin"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:background="@color/twitter_middle_gray"
            android:id="@+id/postTweetImageIv"
            android:layout_below="@+id/posterTweetContentTv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/common_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_placeholder"
            android:id="@+id/posterRetweetedCountTv"
            android:layout_below="@+id/postTweetImageIv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/common_margin"
            android:textColor="@color/twitter_black"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retweet_wording"
            android:id="@+id/retweetWordingTv"
            android:layout_alignTop="@+id/posterRetweetedCountTv"
            android:layout_toRightOf="@+id/posterRetweetedCountTv"
            android:layout_toEndOf="@+id/posterRetweetedCountTv"
            android:layout_marginLeft="@dimen/common_xs_margin"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_placeholder"
            android:id="@+id/postFavoriteCountTv"
            android:layout_alignTop="@+id/retweetWordingTv"
            android:layout_toRightOf="@+id/retweetWordingTv"
            android:layout_toEndOf="@+id/retweetWordingTv"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/twitter_black"
            android:layout_marginLeft="@dimen/common_small_margin"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_wording"
            android:id="@+id/favoriteWordingTv"
            android:layout_alignTop="@+id/postFavoriteCountTv"
            android:layout_toRightOf="@+id/postFavoriteCountTv"
            android:layout_toEndOf="@+id/postFavoriteCountTv"
            android:layout_marginLeft="@dimen/common_xs_margin"
            android:textSize="@dimen/normal_text_size"/>
    </RelativeLayout>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:background="@color/twitter_light_gray"/>


</RelativeLayout>
